--- a/emma.html
+++ b/emma.html
@@ -13,7 +13,6 @@
             overflow: hidden;
             position: fixed;
         }
-
         .background-container {
             position: fixed;
             top: 0;
@@ -21,96 +20,117 @@
             width: 100%;
             height: 100%;
             z-index: -1;
-            background-color: #000;
+            transition: opacity 0.3s ease;
         }
-
+        .background-image {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+        }
         .background-video {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            display: block;
+        }
+        .hidden {
+            opacity: 0;
+            pointer-events: none;
+        }
+        elevenlabs-convai {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            z-index: 1;
         }
     </style>
 </head>
 <body>
-    <div class="background-container">
-        <video class="background-video" id="backgroundVideo" autoplay loop muted>
-            <source id="videoSource" src="hello.mp4" type="video/mp4">
+    <div class="background-container" id="defaultBg">
+        <img class="background-image" src="emma.png" alt="Emma Background">
+    </div>
+    <div class="background-container hidden" id="speakingBg">
+        <video class="background-video" id="speakingVideo" autoplay loop muted>
+            <source src="speaking.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
-
+    
     <elevenlabs-convai 
         id="convai-widget" 
-        agent-id="UFCiWykxf7I8pgANcBuJ" 
-        client-events='["audio"]'>
+        agent-id="UFCiWykxf7I8pgANcBuJ">
     </elevenlabs-convai>
 
-    <script src="https://elevenlabs.io/convai-widget/index.js" async></script>
+    <script src="https://elevenlabs.io/convai-widget/index.js"></script>
+
     <script>
-        const backgroundVideo = document.getElementById('backgroundVideo');
-        const videoSource = document.getElementById('videoSource');
+        const defaultBg = document.getElementById('defaultBg');
+        const speakingBg = document.getElementById('speakingBg');
         const convaiWidget = document.getElementById('convai-widget');
+        const speakingVideo = document.getElementById('speakingVideo');
 
-        // Function to switch the video source
-        function switchVideoSource(newSource) {
-            const currentSrc = videoSource.src.split('/').pop(); // Get current video file name
-            if (currentSrc !== newSource) {
-                videoSource.src = newSource;
-                backgroundVideo.load(); // Reload the video source
-                backgroundVideo.play(); // Start playing the new video
+        // Function to switch background
+        function switchBackground(isSpeaking) {
+            console.log('Switching background:', isSpeaking ? 'speaking' : 'not speaking');
+            if (isSpeaking) {
+                defaultBg.classList.add('hidden');
+                speakingBg.classList.remove('hidden');
+                speakingVideo.play().catch(console.error);
+            } else {
+                defaultBg.classList.remove('hidden');
+                speakingBg.classList.add('hidden');
+                speakingVideo.pause();
             }
         }
 
-        // Audio detection logic
-        function setupAudioDetection() {
-            try {
-                const audioContext = new AudioContext();
-                const analyser = audioContext.createAnalyser();
-                analyser.fftSize = 256;
-                const dataArray = new Uint8Array(analyser.frequencyBinCount);
-
-                // Find the audio element in the widget
-                const widgetAudio = convaiWidget.shadowRoot.querySelector('audio');
-                if (!widgetAudio) {
-                    console.error('No audio element found in widget.');
-                    return;
-                }
-
-                const source = audioContext.createMediaElementSource(widgetAudio);
-                source.connect(analyser);
-                analyser.connect(audioContext.destination);
-
-                let isSpeaking = false;
-
-                function detectAudio() {
-                    analyser.getByteFrequencyData(dataArray);
-                    const audioLevel = dataArray.reduce((sum, value) => sum + value, 0);
-
-                    if (audioLevel > 10) { // Adjust threshold as necessary
-                        if (!isSpeaking) {
-                            isSpeaking = true;
-                            switchVideoSource('speaking.mp4'); // Play speaking video
-                        }
-                    } else {
-                        if (isSpeaking) {
-                            isSpeaking = false;
-                            switchVideoSource('hello.mp4'); // Play default video
-                        }
-                    }
-
-                    requestAnimationFrame(detectAudio);
-                }
-
-                detectAudio();
-            } catch (error) {
-                console.error('Error setting up audio detection:', error);
-            }
-        }
-
-        // Initialize audio detection when the page is loaded
+        // Wait for the widget to be ready
         document.addEventListener('DOMContentLoaded', () => {
-            setupAudioDetection();
+            // Log when widget is loaded
+            console.log('DOM Content Loaded, setting up widget...');
+
+            convaiWidget.addEventListener('ready', (event) => {
+                console.log('Widget ready event received');
+                
+                // Set up client tools
+                if (event.detail?.signedUrl) {
+                    window.clientTools = {
+                        switchBackground: async (parameters) => {
+                            console.log('switchBackground called with parameters:', parameters);
+                            switchBackground(parameters.speaking);
+                            return { success: true };
+                        }
+                    };
+                }
+            });
+
+            // Listen for audio events
+            convaiWidget.addEventListener('audiostart', () => {
+                console.log('Audio started');
+                switchBackground(true);
+            });
+
+            convaiWidget.addEventListener('audioend', () => {
+                console.log('Audio ended');
+                switchBackground(false);
+            });
+
+            // Debug event listeners
+            ['message', 'error', 'statechange', 'conversationstart', 'conversationend'].forEach(eventName => {
+                convaiWidget.addEventListener(eventName, (event) => {
+                    console.log(`Event ${eventName}:`, event.detail);
+                });
+            });
+        });
+
+        // Ensure video is ready to play
+        speakingVideo.addEventListener('loadeddata', () => {
+            console.log('Video loaded and ready');
+        });
+
+        // Error handling for video
+        speakingVideo.addEventListener('error', (e) => {
+            console.error('Video error:', e);
         });
     </script>
 </body>
