--- a/emma.html
+++ b/emma.html
@@ -13,7 +13,6 @@
             overflow: hidden;
             position: fixed;
         }
-
         .background-container {
             position: fixed;
             top: 0;
@@ -23,7 +22,6 @@
             z-index: -1;
             background-color: #000;
         }
-
         .background-image {
             width: 100%;
             height: 100%;
@@ -32,16 +30,26 @@
             max-width: 100vw;
             max-height: 100vh;
         }
-
         elevenlabs-convai {
             position: fixed;
             bottom: 0;
-            left: -40px;
+            left: -70px;
             width: 100%;
             z-index: 1;
             padding-bottom: env(safe-area-inset-bottom);
         }
-
+        #conversation-log {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            width: 300px;
+            height: 400px;
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 10px;
+            overflow-y: auto;
+            border-radius: 5px;
+        }
         @media screen and (max-width: 768px) {
             .background-image {
                 object-position: center center;
@@ -53,29 +61,22 @@
     <div class="background-container">
         <img class="background-image" src="./emma.png" alt="Emma Background">
     </div>
-
-    <!-- Preload audio for faster loading -->
+    <div id="conversation-log"></div>
     <audio id="welcomeAudio" preload="auto">
         <source src="hey.mp3" type="audio/mpeg">
     </audio>
-
     <elevenlabs-convai agent-id="UFCiWykxf7I8pgANcBuJ"></elevenlabs-convai>
     <script src="https://elevenlabs.io/convai-widget/index.js" async></script>
-
     <script>
-        // Function to play audio
+        // Function to play welcome audio
         function playWelcomeAudio() {
             const audio = document.getElementById('welcomeAudio');
-            // Reset audio to beginning
             audio.currentTime = 0;
-            // Set volume
             audio.volume = 1.0;
-            // Promise-based play with retry
             const playAttempt = audio.play();
             if (playAttempt !== undefined) {
                 playAttempt.catch(error => {
                     console.log('Auto-play failed:', error);
-                    // Add click event listener if autoplay fails
                     document.addEventListener('click', function playOnClick() {
                         audio.play();
                         document.removeEventListener('click', playOnClick);
@@ -84,27 +85,44 @@
             }
         }
 
-        // Try to play when page loads
-        if (document.readyState === 'loading') {
-            document.addEventListener('DOMContentLoaded', playWelcomeAudio);
-        } else {
+        // Initialize websocket connection
+        function initializeWebSocket() {
+            const socket = new WebSocket('wss://api.elevenlabs.io/v1/text-to-speech/streams');
+            
+            socket.onopen = () => {
+                console.log('WebSocket connected');
+            };
+
+            // Listen for widget messages
+            window.addEventListener('message', (event) => {
+                if (event.data && event.data.type === 'elevenlabs-response') {
+                    const text = event.data.text;
+                    logConversation('AI: ' + text);
+                }
+                if (event.data && event.data.type === 'elevenlabs-user-input') {
+                    const text = event.data.text;
+                    logConversation('User: ' + text);
+                }
+            });
+        }
+
+        // Function to log conversations
+        function logConversation(text) {
+            const log = document.getElementById('conversation-log');
+            const entry = document.createElement('p');
+            entry.textContent = text;
+            log.appendChild(entry);
+            log.scrollTop = log.scrollHeight;
+        }
+
+        // Initialize everything when DOM is loaded
+        document.addEventListener('DOMContentLoaded', () => {
             playWelcomeAudio();
-        }
+            initializeWebSocket();
+        });
 
-        // Backup: also try to play when window loads
         window.addEventListener('load', playWelcomeAudio);
-
-        // Additional attempt after a short delay
         setTimeout(playWelcomeAudio, 1000);
-
-        // Function to handle events
-        function handleEvent(event) {
-            console.log(`Event: ${event.type}`, event.detail);
-        }
-
-        // Add event listeners for 'audio' and 'interruption' events
-        document.addEventListener('audio', handleEvent);
-        document.addEventListener('interruption', handleEvent);
     </script>
 </body>
 </html>
