--- a/emma.html
+++ b/emma.html
@@ -30,26 +30,6 @@
             max-width: 100vw;
             max-height: 100vh;
         }
-        elevenlabs-convai {
-            position: fixed;
-            bottom: 0;
-            left: -70px;
-            width: 100%;
-            z-index: 1;
-            padding-bottom: env(safe-area-inset-bottom);
-        }
-        #conversation-log {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            width: 300px;
-            height: 400px;
-            background: rgba(0, 0, 0, 0.7);
-            color: white;
-            padding: 10px;
-            overflow-y: auto;
-            border-radius: 5px;
-        }
         @media screen and (max-width: 768px) {
             .background-image {
                 object-position: center center;
@@ -61,68 +41,51 @@
     <div class="background-container">
         <img class="background-image" src="./emma.png" alt="Emma Background">
     </div>
-    <div id="conversation-log"></div>
-    <audio id="welcomeAudio" preload="auto">
-        <source src="hey.mp3" type="audio/mpeg">
-    </audio>
-    <elevenlabs-convai agent-id="UFCiWykxf7I8pgANcBuJ"></elevenlabs-convai>
-    <script src="https://elevenlabs.io/convai-widget/index.js" async></script>
     <script>
-        // Function to play welcome audio
-        function playWelcomeAudio() {
-            const audio = document.getElementById('welcomeAudio');
-            audio.currentTime = 0;
-            audio.volume = 1.0;
-            const playAttempt = audio.play();
-            if (playAttempt !== undefined) {
-                playAttempt.catch(error => {
-                    console.log('Auto-play failed:', error);
-                    document.addEventListener('click', function playOnClick() {
-                        audio.play();
-                        document.removeEventListener('click', playOnClick);
-                    }, { once: true });
-                });
-            }
-        }
+        document.addEventListener('DOMContentLoaded', () => {
+            const agentId = 'UFCiWykxf7I8pgANcBuJ';
+            const socket = new WebSocket(`wss://api.elevenlabs.io/v1/convai/conversation?agent_id=${agentId}`);
 
-        // Initialize websocket connection
-        function initializeWebSocket() {
-            const socket = new WebSocket('wss://api.elevenlabs.io/v1/text-to-speech/streams');
-            
-            socket.onopen = () => {
-                console.log('WebSocket connected');
+            socket.onopen = function() {
+                console.log('WebSocket connection established');
             };
 
-            // Listen for widget messages
-            window.addEventListener('message', (event) => {
-                if (event.data && event.data.type === 'elevenlabs-response') {
-                    const text = event.data.text;
-                    logConversation('AI: ' + text);
+            socket.onmessage = function(event) {
+                const data = JSON.parse(event.data);
+                if (data.type === 'agent_response') {
+                    const agentText = data.agent_response_event.agent_response;
+                    console.log('Agent says:', agentText);
+                    // Display or process the agent's response as needed
                 }
-                if (event.data && event.data.type === 'elevenlabs-user-input') {
-                    const text = event.data.text;
-                    logConversation('User: ' + text);
-                }
-            });
-        }
+            };
 
-        // Function to log conversations
-        function logConversation(text) {
-            const log = document.getElementById('conversation-log');
-            const entry = document.createElement('p');
-            entry.textContent = text;
-            log.appendChild(entry);
-            log.scrollTop = log.scrollHeight;
-        }
+            socket.onclose = function() {
+                console.log('WebSocket connection closed');
+            };
 
-        // Initialize everything when DOM is loaded
-        document.addEventListener('DOMContentLoaded', () => {
-            playWelcomeAudio();
-            initializeWebSocket();
+            socket.onerror = function(error) {
+                console.error('WebSocket error:', error);
+            };
+
+            navigator.mediaDevices.getUserMedia({ audio: true })
+                .then(stream => {
+                    const mediaRecorder = new MediaRecorder(stream);
+                    mediaRecorder.ondataavailable = function(event) {
+                        if (event.data.size > 0) {
+                            const reader = new FileReader();
+                            reader.onload = function() {
+                                const base64Audio = reader.result.split(',')[1];
+                                socket.send(JSON.stringify({ user_audio_chunk: base64Audio }));
+                            };
+                            reader.readAsDataURL(event.data);
+                        }
+                    };
+                    mediaRecorder.start(250); // Send audio chunks every 250ms
+                })
+                .catch(error => {
+                    console.error('Error accessing microphone:', error);
+                });
         });
-
-        window.addEventListener('load', playWelcomeAudio);
-        setTimeout(playWelcomeAudio, 1000);
     </script>
 </body>
 </html>
