--- a/emma.html
+++ b/emma.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +13,6 @@
             width: 100%;
             overflow: hidden;
             position: fixed;
-            font-family: Arial, sans-serif;
         }
         .background-container {
             position: fixed;
@@ -31,35 +31,15 @@
             max-width: 100vw;
             max-height: 100vh;
         }
-        #chatContainer {
-            background-color: black;
-            color: white;
-            padding: 10px;
-            border-radius: 5px;
-            width: 90%;
-            max-width: 600px;
-            margin: 20px auto;
-            height: 400px;
-            overflow-y: auto;
-        }
-        .message {
-            margin: 10px 0;
-        }
-        #startButton {
-            display: block;
-            margin: 10px auto;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-        }
         elevenlabs-convai {
             position: fixed;
             bottom: 0;
-            left: -70px;
+            left: -70;
             width: 100%;
             z-index: 1;
-            padding-bottom: env(safe-area-inset-bottom);
+            padding-bottom: env(safe-area-inset-bottom); /* For devices with bottom bars /
         }
+        / Additional mobile optimizations */
         @media screen and (max-width: 768px) {
             .background-image {
                 object-position: center center;
@@ -68,83 +48,14 @@
     </style>
 </head>
 <body>
+    <!-- Background Container -->
     <div class="background-container">
         <img class="background-image" src="./emma.png" alt="Emma Background">
     </div>
-    <div id="chatContainer"></div>
-    <button id="startButton">Start Conversation</button>
+    <!-- ElevenLabs Convai Widget -->
     <elevenlabs-convai agent-id="UFCiWykxf7I8pgANcBuJ"></elevenlabs-convai>
-    <script src="https://elevenlabs.io/convai-widget/index.js" async></script>
-    <script type="module">
-        import { Conversation } from 'https://cdn.skypack.dev/@11labs/client';
 
-        document.getElementById('startButton').addEventListener('click', async () => {
-            const chatContainer = document.getElementById('chatContainer');
-
-            const appendMessage = (text) => {
-                const messageElement = document.createElement('p');
-                messageElement.classList.add('message');
-                messageElement.textContent = text;
-                chatContainer.appendChild(messageElement);
-                chatContainer.scrollTop = chatContainer.scrollHeight;
-            };
-
-            try {
-                await navigator.mediaDevices.getUserMedia({ audio: true });
-
-                const conversation = await Conversation.startSession({
-                    agentId: 'UFCiWykxf7I8pgANcBuJ',
-                    onMessage: (message) => {
-                        if (message && message.text) {
-                            appendMessage(`Agent: ${message.text}`);
-                        } else {
-                            appendMessage('Received a message without text content.');
-                        }
-                    },
-                    onConnect: () => {
-                        appendMessage('Connected to the agent.');
-                    },
-                    onDisconnect: () => {
-                        appendMessage('Disconnected from the agent.');
-                    },
-                    onError: (error) => {
-                        appendMessage(`Error: ${error.message}`);
-                    },
-                });
-
-                // Optional: End the session after a certain condition
-                // await conversation.endSession();
-            } catch (error) {
-                appendMessage(`Failed to start conversation: ${error.message}`);
-            }
-        });
-
-        // Function to play audio
-        function playWelcomeAudio() {
-            const audio = document.getElementById('welcomeAudio');
-            audio.currentTime = 0;
-            audio.volume = 1.0;
-            const playAttempt = audio.play();
-            if (playAttempt !== undefined) {
-                playAttempt.catch(error => {
-                    console.log('Auto-play failed:', error);
-                    document.addEventListener('click', function playOnClick() {
-                        audio.play();
-                        document.removeEventListener('click', playOnClick);
-                    }, { once: true });
-                });
-            }
-        }
-
-        if (document.readyState === 'loading') {
-            document.addEventListener('DOMContentLoaded', playWelcomeAudio);
-        } else {
-            playWelcomeAudio();
-        }
-
-        window.addEventListener('load', playWelcomeAudio);
-        setTimeout(playWelcomeAudio, 1000);
-    </script>
+    <!-- ElevenLabs Convai Widget Script -->
+    <script src="https://elevenlabs.io/convai-widget/index.js" async type="text/javascript"></script>
 </body>
 </html>
-
