--- a/memebots/index3.html
+++ b/memebots/index3.html
@@ -176,7 +176,7 @@
       </div>
       <div class="w-full lg:w-1/2">
         <img
-          src="/api/placeholder/600/400"
+          src="/memebots/pepe.png"
           alt="MemeBot Preview"
           class="rounded-2xl shadow-2xl float"
         />
